--- a/servidor_minecraft/plugins/PlaceholderAPI/config.yml
+++ b/servidor_minecraft/plugins/PlaceholderAPI/config.yml
@@ -34,3 +34,18 @@ expansions:
       medium: '&e'
       high: '&c'
       low: '&a'
+  server:
+    server_name: A Minecraft Server
+    time:
+      locale: en
+      zone: Etc/UTC
+      suffix:
+        week: w
+        day: d
+        hour: h
+        minute: m
+        second: s
+    tps_color:
+      high: '&a'
+      medium: '&e'
+      low: '&c'
