--- a/servidor_minecraft/config/tab/config.yml
+++ b/servidor_minecraft/config/tab/config.yml
@@ -2,10 +2,9 @@
 header-footer:
   enabled: true
   header:
-    - "&#BC83FF&l-&#BB7FFF&l-&#BA7AFE&l-&#B976FE&l-&#B872FE&l-&#B76DFD&l-&#B669FD&l-&#B565FD&l-&#B461FD&l-&#B25CFC&l-&#B158FC&l-&#B054FC&l-&#AF4FFB&l-&#AE4BFB&l-&#AD47FB&l-&#AC42FA&l-&#AB3EFA&l-&#AC42FA&l-&#AD47FB&l-&#AE4BFB&l-&#AF4FFB&l-&#B054FC&l-&#B158FC&l-&#B25CFC&l-&#B461FD&l-&#B565FD&l-&#B669FD&l-&#B76DFD&l-&#B872FE&l-&#B976FE&l-&#BA7AFE&l-&#BB7FFF&l-&#BC83FF&l-"
-    - ""
-    - "&#BC83FF&lI &#B66CFD&la&#B461FD&lm &#AE4AFB&la&#AB3EFA&lt&#AE4CFB&lo&#B25AFC&lm&#B567FD&li&#B975FE&lc"
-    - ""
+    - "&x&4&F&4&F&4&F&l⊐&x&5&6&5&6&5&6&l-&x&5&D&5&D&5&D&l-&x&6&5&6&5&6&5&l-&x&6&C&6&C&6&C&l-&x&7&3&7&3&7&3&l-&x&7&A&7&A&7&A&l-&x&8&2&8&2&8&2&l-&x&8&9&8&9&8&9&l-&x&9&0&9&0&9&0&l-&x&9&7&9&7&9&7&l-&x&9&F&9&F&9&F&l-&x&A&6&A&6&A&6&l-&x&A&D&A&D&A&D&l-&x&B&4&B&4&B&4&l-&x&B&C&B&C&B&C&l-&x&C&3&C&3&C&3&l-&x&C&A&C&A&C&A&l-&x&C&3&C&3&C&3&l-&x&B&C&B&C&B&C&l-&x&B&4&B&4&B&4&l-&x&A&D&A&D&A&D&l-&x&A&6&A&6&A&6&l-&x&9&F&9&F&9&F&l-&x&9&7&9&7&9&7&l-&x&9&0&9&0&9&0&l-&x&8&9&8&9&8&9&l-&x&8&2&8&2&8&2&l-&x&7&A&7&A&7&A&l-&x&7&3&7&3&7&3&l-&x&6&C&6&C&6&C&l-&x&6&5&6&5&6&5&l-&x&5&D&5&D&5&D&l-&x&5&6&5&6&5&6&l-&x&4&F&4&F&4&F&l⊏"
+    - "&x&9&5&5&7&E&C&lS&x&9&1&5&0&E&B&lh&x&8&C&4&9&E&A&la&x&8&8&4&2&E&9&ld&x&8&3&3&B&E&8&lo&x&7&F&3&4&E&7&lw &x&7&6&2&6&E&5&lN&x&7&C&3&2&E&9&le&x&8&2&3&E&E&D&lt&x&8&8&4&B&F&1&lo&x&8&D&5&7&F&4&lw&x&9&3&6&3&F&8&lr&x&9&9&6&F&F&C&lk"
+    - "&fWelcome &7%player_online%"
     - "&r&7Online players: &f%online%"
     - ""
     - ""
@@ -15,7 +14,7 @@ header-footer:
     - ""
     - "%animation:time%"
     - "&7&l Used memory: %memory-used% MB / %memory-max% MB"
-    - "&#BC83FF&l-&#BB7FFF&l-&#BA7AFE&l-&#B976FE&l-&#B872FE&l-&#B76DFD&l-&#B669FD&l-&#B565FD&l-&#B461FD&l-&#B25CFC&l-&#B158FC&l-&#B054FC&l-&#AF4FFB&l-&#AE4BFB&l-&#AD47FB&l-&#AC42FA&l-&#AB3EFA&l-&#AC42FA&l-&#AD47FB&l-&#AE4BFB&l-&#AF4FFB&l-&#B054FC&l-&#B158FC&l-&#B25CFC&l-&#B461FD&l-&#B565FD&l-&#B669FD&l-&#B76DFD&l-&#B872FE&l-&#B976FE&l-&#BA7AFE&l-&#BB7FFF&l-&#BC83FF&l-"
+    - "&x&4&F&4&F&4&F&l⊐&x&5&6&5&6&5&6&l-&x&5&D&5&D&5&D&l-&x&6&5&6&5&6&5&l-&x&6&C&6&C&6&C&l-&x&7&3&7&3&7&3&l-&x&7&A&7&A&7&A&l-&x&8&2&8&2&8&2&l-&x&8&9&8&9&8&9&l-&x&9&0&9&0&9&0&l-&x&9&7&9&7&9&7&l-&x&9&F&9&F&9&F&l-&x&A&6&A&6&A&6&l-&x&A&D&A&D&A&D&l-&x&B&4&B&4&B&4&l-&x&B&C&B&C&B&C&l-&x&C&3&C&3&C&3&l-&x&C&A&C&A&C&A&l-&x&C&3&C&3&C&3&l-&x&B&C&B&C&B&C&l-&x&B&4&B&4&B&4&l-&x&A&D&A&D&A&D&l-&x&A&6&A&6&A&6&l-&x&9&F&9&F&9&F&l-&x&9&7&9&7&9&7&l-&x&9&0&9&0&9&0&l-&x&8&9&8&9&8&9&l-&x&8&2&8&2&8&2&l-&x&7&A&7&A&7&A&l-&x&7&3&7&3&7&3&l-&x&6&C&6&C&6&C&l-&x&6&5&6&5&6&5&l-&x&5&D&5&D&5&D&l-&x&5&6&5&6&5&6&l-&x&4&F&4&F&4&F&l⊏"
   disable-condition: '%world%=disabledworld'
   per-world:
     world1:
